--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "frontend",
+  "name": "znajdzosiedle",
   "version": "0.1.0",
   "private": true,
+  "main": "app.js",
   "dependencies": {
+    "@blueprintjs/core": "^3.22.3",
+    "@blueprintjs/select": "^3.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "mobx": "^5.15.1",
-    "mobx-react": "^6.1.4",
-    "node-sass": "^4.13.0",
+    "axios": "^0.19.2",
+    "color-scheme": "^1.0.1",
+    "esm": "^3.2.25",
+    "http-proxy-middleware": "^0.20.0",
+    "js-cookie": "^2.2.1",
+    "leaflet": "^1.6.0",
+    "lodash": "^4.17.15",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^1.5.2",
+    "node-sass": "^4.13.1",
+    "query-overpass": "^1.5.5",
+    "querystring": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-leaflet": "^2.6.1",
+    "react-leaflet-geojson-patterns": "^1.1.0",
+    "react-md": "^1.14.0",
+    "react-scripts": "3.3.0",
+    "reflexbox": "^4.0.6",
+    "slugify": "^1.3.6",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "node -r esm ./bin/api"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
